; ModuleID = '/home/carl/AnghaBench/systemd/src/shutdown/extr_shutdown.c_switch_root_initramfs.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shutdown/extr_shutdown.c_switch_root_initramfs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"/run/initramfs\00", align 1
@MS_BIND = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [58 x i8] c"Failed to mount bind /run/initramfs on /run/initramfs: %m\00", align 1
@MS_PRIVATE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [48 x i8] c"Failed to make /run/initramfs private mount: %m\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"/oldroot\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @switch_root_initramfs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @switch_root_initramfs() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @MS_BIND, align 4
  %3 = call i64 @mount(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32* null, i32 %2, i32* null)
  %4 = icmp slt i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* @errno, align 4
  %7 = call i32 @log_error_errno(i32 %6, i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.1, i64 0, i64 0))
  store i32 %7, i32* %1, align 4
  br label %18

8:                                                ; preds = %0
  %9 = load i32, i32* @MS_PRIVATE, align 4
  %10 = call i64 @mount(i8* null, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32* null, i32 %9, i32* null)
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %8
  %13 = load i32, i32* @errno, align 4
  %14 = call i32 @log_error_errno(i32 %13, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.2, i64 0, i64 0))
  store i32 %14, i32* %1, align 4
  br label %18

15:                                               ; preds = %8
  %16 = load i32, i32* @MS_BIND, align 4
  %17 = call i32 @switch_root(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i32 0, i32 %16)
  store i32 %17, i32* %1, align 4
  br label %18

18:                                               ; preds = %15, %12, %5
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i64 @mount(i8*, i8*, i32*, i32, i32*) #1

declare dso_local i32 @log_error_errno(i32, i8*) #1

declare dso_local i32 @switch_root(i8*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
